--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,14 +1,28 @@
-name: pre-commit
+name: CI
 
 on:
-  pull_request:
   push:
-    branches: [main]
+    branches:
+      - main
+  pull_request:
 
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-      - uses: pre-commit/action@v3.0.0
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: latest
+
+      - name: Verify Terraform Installation
+        run: terraform version
+
+      - name: Install Pre-commit
+        run: python -m pip install --upgrade pip pre-commit
+
+      - name: Run Pre-commit Hooks
+        run: pre-commit run --show-diff-on-failure --color=always --all-files
