--- a/.github/workflows/tf-lint.yml
+++ b/.github/workflows/tf-lint.yml
@@ -1,13 +1,13 @@
-
 name: Terraform-Lint
 on:
   push:
-    branches: [ main ]
+    branches:
+    - main
   pull_request:
 
 jobs:
   tflint:
-    runs-on:  ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
